.provarCaches/00D5h000009Q6XQEA0/objects/provar__Test_Case_Defect__c.object
<CustomObject>
    <description>Defines the relationship between a defect and the test cases it impacts.</description>
    <fields>
        <fullName>provar__Defect__c</fullName>
        <label>Defect</label>
        <referenceTo>provar__Defect__c</referenceTo>
        <relationshipLabel>Test Cases</relationshipLabel>
        <relationshipName>Test_Case_Defects</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>provar__Test_Case__c</fullName>
        <label>Test Case</label>
        <referenceTo>provar__Test_Case__c</referenceTo>
        <relationshipLabel>Defects</relationshipLabel>
        <relationshipName>Test_Case_Defects</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>provar__Test_Step__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Test Step</label>
        <referenceTo>provar__Test_Step__c</referenceTo>
        <relationshipLabel>Defects</relationshipLabel>
        <relationshipName>Test_Case_Defects</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Test Case Defect</label>
    <nameField>
        <displayFormat>TCD-{000000}</displayFormat>
        <label>Test Case Defect Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Test Case Defects</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>